Logger configuration added

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 security.basic.enabled=false
 management.security.enabled=false
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
+logging.file.path=web/webApplication.log
