--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -8,3 +8,6 @@ logging.file.path=web/webApplication.log
 
 server.error.include-message=always
 server.error.include-binding-errors=always
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
