--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -8,6 +8,8 @@ logging.file.path=web/webApplication.log
 
 server.error.include-message=always
 server.error.include-binding-errors=always
+server.error.include-stacktrace=on_param
+server.error.include-exception=false
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
