--- a/model/pom.xml
+++ b/model/pom.xml
@@ -130,6 +130,26 @@
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>2.8.2</version>
                 </plugin>
+<!--                <plugin>-->
+<!--                    <groupId>org.liquibase</groupId>-->
+<!--                    <artifactId>liquibase-maven-plugin</artifactId>-->
+<!--                    <version>3.5.3</version>-->
+<!--                    <executions>-->
+<!--                        <execution>-->
+<!--                            <phase>process-resources</phase>-->
+<!--                            <goals>-->
+<!--                                <goal>update</goal>-->
+<!--                            </goals>-->
+<!--                            <configuration>-->
+<!--                                <changeLogFile>src/main/resources/changelog-personnel_management_system.xml</changeLogFile>-->
+<!--                                <driver>com.mysql.cj.jdbc.Driver</driver>-->
+<!--                                <url>jdbc:mysql://localhost:3306/personnel_management?serverTimezone=UTC&amp;createDatabaseIfNotExist=true</url>-->
+<!--                                <username>root</username>-->
+<!--                                <password>root</password>-->
+<!--                            </configuration>-->
+<!--                        </execution>-->
+<!--                    </executions>-->
+<!--                </plugin>-->
             </plugins>
         </pluginManagement>
     </build>
