logger configuration updated

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 security.basic.enabled=false
 management.security.enabled=false
 
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=ERROR
-logging.file.path=web/webApplication.log
+#logging.level.org.springframework.web=DEBUG
+#logging.level.org.hibernate=ERROR
+#logging.file.name=webApplication.log
 
 server.error.include-message=always
 server.error.include-binding-errors=always
