--- a/model/pom.xml
+++ b/model/pom.xml
@@ -27,13 +27,13 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>5.3.15</version>
+            <version>5.3.16</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.25</version>
+            <version>8.0.28</version>
             <scope>compile</scope>
         </dependency>
 <!--        <dependency>-->
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
-            <version>5.3.15</version>
+            <version>5.3.16</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -55,13 +55,13 @@
         <dependency>
             <groupId>org.dbunit</groupId>
             <artifactId>dbunit</artifactId>
-            <version>2.7.2</version>
+            <version>2.7.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>5.3.15</version>
+            <version>5.3.16</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -72,12 +72,12 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
-            <version>2.6.1</version>
+            <version>2.6.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
-            <version>2.6.1</version>
+            <version>2.6.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -90,11 +90,11 @@
             <artifactId>hibernate-core</artifactId>
             <version>5.6.5.Final</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-data-jpa</artifactId>-->
-<!--            <version>2.6.3</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-maven-plugin</artifactId>
+            <version>4.8.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -130,26 +130,29 @@
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>2.8.2</version>
                 </plugin>
-<!--                <plugin>-->
-<!--                    <groupId>org.liquibase</groupId>-->
-<!--                    <artifactId>liquibase-maven-plugin</artifactId>-->
-<!--                    <version>3.5.3</version>-->
-<!--                    <executions>-->
-<!--                        <execution>-->
-<!--                            <phase>process-resources</phase>-->
-<!--                            <goals>-->
-<!--                                <goal>update</goal>-->
-<!--                            </goals>-->
+                <plugin>
+                    <groupId>org.liquibase</groupId>
+                    <artifactId>liquibase-maven-plugin</artifactId>
+                    <version>3.5.3</version>
+                    <executions>
+                        <execution>
+                            <phase>process-resources</phase>
+                            <goals>
+                                <goal>update</goal>
+                            </goals>
+                            <configuration>
+                                <propertyFile>src/main/resources/db/liquibase.properties</propertyFile>
+                            </configuration>
 <!--                            <configuration>-->
-<!--                                <changeLogFile>src/main/resources/changelog-personnel_management_system.xml</changeLogFile>-->
+<!--                                <changeLogFile>src/main/resources/db/changelog-sams-project.xml</changeLogFile>-->
 <!--                                <driver>com.mysql.cj.jdbc.Driver</driver>-->
-<!--                                <url>jdbc:mysql://localhost:3306/personnel_management?serverTimezone=UTC&amp;createDatabaseIfNotExist=true</url>-->
-<!--                                <username>root</username>-->
-<!--                                <password>root</password>-->
+<!--                                <url>jdbc:mysql://localhost:3306/my_db?serverTimezone=UTC&amp;createDatabaseIfNotExist=true</url>-->
+<!--                                <username>bestuser</username>-->
+<!--                                <password>bestuser</password>-->
 <!--                            </configuration>-->
-<!--                        </execution>-->
-<!--                    </executions>-->
-<!--                </plugin>-->
+                        </execution>
+                    </executions>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
