--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 security.basic.enabled=false
 management.security.enabled=false
 
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
+
 server.error.include-message=always
 server.error.include-binding-errors=always
 server.error.include-stacktrace=on_param
