--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -13,3 +13,5 @@ server.error.include-exception=false
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
