--- a/model/src/main/resources/db/liquibase.properties
+++ b/model/src/main/resources/db/liquibase.properties
@@ -1,4 +1,4 @@
-url=jdbc:mysql://localhost:3306/my_db?serverTimezone=UTC&amp;createDatabaseIfNotExist=true
+url=jdbc:mysql://localhost:3306/my_db
 username=bestuser
 password=bestuser
 driver=com.mysql.cj.jdbc.Driver
