--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -3,7 +3,7 @@ security.basic.enabled=false
 management.security.enabled=false
 
 logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=ERROR
+logging.level.org.hibernate=DEBUG
 
 server.error.include-message=always
 server.error.include-binding-errors=always
