--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.liquibase.enabled=false
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
