--- a/model/pom.xml
+++ b/model/pom.xml
@@ -96,6 +96,11 @@
             <version>1.10.19</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jeasy</groupId>
+            <artifactId>easy-random-core</artifactId>
+            <version>4.0.0</version>
+        </dependency>
 
     </dependencies>
 
