--- a/model/src/main/resources/db/db.properties
+++ b/model/src/main/resources/db/db.properties
@@ -1,3 +1,5 @@
 db.username = bestuser
 db.password = bestuser
 db.url = jdbc:mysql://localhost:3306/my_db
+
+hibernate.dialect = org.hibernate.dialect.MySQLDialect
