--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -9,6 +9,8 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 server.error.include-stacktrace=on_param
 server.error.include-exception=false
+server.error.path=/error
+server.error.whitelabel.enabled=false
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
